# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  END_RAPORT.md  LICENSE  Procfile  README.md  end_report.md  fly.toml  pyproject.toml  retro.md  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: main.yml
documents/: DoD.md
src/: AppLibrary.py  app.py  config.py  database.py  flask_app.py  index.py  reader_writer.py  routes.py  schema.sql
src/entities/: reference.py
src/repositories/: citation_repository.py  user_repository.py
src/services/: bibtex_service.py  error_handler.py  file_service.py  io_service.py  validation_service.py
src/static/styles/: style.css
src/templates/: index.html  login.html  register.html
src/tests/: FileOperations.py  bibtex_service_test.py  bibtexui.robot  file_service_test.py  github_actions_test.py  reference_test.py  resource.robot  validation_service_test.py  web_resource.robot  webui.robot
src/tests/web/: citation_response.robot  login.robot  login_resource.robot  login_response.robot  register.robot  register_resource.robot  register_response.robot  response_resource.robot  web_resource.robot  webui.robot
