[tool.poetry]
name = "citeninja"
version = "0.1.0"
description = ""
authors = ["SJET-Code <santeri.tolonen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
