[tool.poetry]
name = "citeninja"
version = "0.1.0"
description = ""
authors = ["SJET-Code <santeri.tolonen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bibtexparser = "^1.4.1"
robotframework = "^6.1.1"
flask = "^3.0.0"
invoke = "^2.2.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
coverage = "^7.3.2"
robotframework-seleniumlibrary = "^6.2.0"
robotframework-requests = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
